--- a/Carousel/assets/package.json
+++ b/Carousel/assets/package.json
@@ -5,8 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./sass/main.scss:.public/css/style.css --style compressed"
-  },
+  "sass": "sass --watch ./sass/main.scss:./sass/main.css",
   "author": "",
   "license": "ISC"
+ }
 }
