--- a/monster-slayer/assets/package.json
+++ b/monster-slayer/assets/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./sass/main.scss:./sass/main.css"
+    "sass": "sass --watch ./sass/main.scss:.public/css/style.css --style compressed"
   },
   "author": "",
   "license": "ISC"
